2007-10-27  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpwidgets-utils.c (gimp_text_buffer_load): close
	the file handle.

2007-10-27  Sven Neumann  <sven@gimp.org>

	* libgimpbase/gimpmemsize.c (string_to_memsize): don't just crash
	right away if the impossible happens.

2007-10-27  Sven Neumann  <sven@gimp.org>

	* app/dialogs/preferences-dialog.c (prefs_resolution_source_callback):
	g_object_get_data() should always return a size-entry here. Return
	with a warning if it doesn't.

2007-10-27  Sven Neumann  <sven@gimp.org>

	* libgimpconfig/gimpscanner.c (gimp_scanner_parse_color):
	initialize GimpRGB, just to be sure.

2007-10-27  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-handlers.c: removed code that syncs
	the padding color with the default values set in the preferences.
	Fixes bug #490785.

2007-10-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/pnm.c (pnm_load_ascii): fixed handling of
	truncated ascii files. Fixes bug #490827.

2007-10-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/pnm.c: formatting.
	(pnm_load_ascii): 

2007-10-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/mkgen.pl: set the svn:ignore property instead of
	writing a .cvsignore file.

2007-10-27  Sven Neumann  <sven@gimp.org>

	* libgimpconfig/gimpcolorconfig.h (struct _GimpColorConfig):
	declared the fields as public so that they show up in the API
	documentation.

2007-10-27  Hans Breuer  <hans@breuer.org>

	* app/base/makefile.msc app/file/makefile.msc app/gimpcore.def
	  app/gui/makefile.msc app/plug-in/makefile.msc
	  libgimpwidgets/makefile.msc : updated msvc build
	* config.h.win32 : add ENABLE_TOOLBOX_MENU, it should only
	vanish on Mac OSX (Quartz build)

2007-10-27  Tor Lillqvist  <tml@novell.com>

	* libgimpbase/gimpenv.c (gimp_toplevel_directory): Drop the Win9x
	code path here, too.

	* libgimpbase/gimpenv.c (gimp_locale_directory): On Windows return
	the pathname in system codepage and not UTF-8.
